# Wrok_Video

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
scripts/: clean_large_files.ps1
src/reunion_resume/: __init__.py  __main__.py  app.py  config.py  paths.py
src/reunion_resume/core/: mixer.py  obsidian.py  ollama_runtime.py  pipeline.py  recorder.py  summarizer.py  transcriber.py
src/reunion_resume/core/backends/: __init__.py  base.py  canary.py  whisper.py
src/reunion_resume/gui/: file_tab.py  live_tab.py  main_window.py  model_selector.py  settings_dlg.py  workers.py
