[project]
name = "wrok-video"
version = "0.1.0"
description = "Wrok-video — outil local de transcription/résumé de réunions vidéo (mode fichier + capture live)"
authors = [{ name = "kbout" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # GUI
    "PySide6>=6.7,<6.9",

    # Transcription locale (Whisper via CTranslate2)
    "faster-whisper>=1.0.3",

    # Client Ollama
    "ollama>=0.4.0",

    # Capture audio
    "sounddevice>=0.4.7",      # micro (PortAudio)
    "soundcard>=0.4.3",        # audio système (WASAPI loopback Windows)
    "numpy>=1.26",
    "soundfile>=0.12.1",

    # Capture écran + encodage
    "mss>=9.0.1",
    "av>=12.0.0",              # PyAV (FFmpeg bindings)
    "Pillow>=10.0",

    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "PyYAML>=6.0.1",

    # Utilitaires
    "python-slugify>=8.0",
    "huggingface-hub>=0.24",
    "rich>=13.7",              # logs lisibles en dev

    # Libs CUDA NVIDIA — embarquees pour permettre l'acceleration GPU automatique
    # Ajoute ~2 GB au venv et au build PyInstaller MAIS l'app reste fonctionnelle
    # 100% sur les PC sans GPU NVIDIA (probe runtime + fallback CPU silencieux).
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cuda-runtime-cu12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
build = [
    "pyinstaller>=6.10",
]
# Backend NeMo Canary 1B (multilingue FR/EN/DE/ES). LOURD : ajoute ~3 GB (torch + nemo).
# Installer SEULEMENT si on veut activer ce backend en complement de Whisper.
# Install : uv pip install --python .venv\Scripts\python.exe -e ".[canary]"
canary = [
    "nemo_toolkit[asr]>=2.0",
    "torch",
    "torchaudio",
]

[project.scripts]
wrok-video = "reunion_resume.__main__:main"

[project.gui-scripts]
wrok-video-gui = "reunion_resume.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reunion_resume"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
